Fix the nightly build for LSB, and add a setting for arch-indep builds.

--- a/master.cfg
+++ b/master.cfg
@@ -1,6 +1,8 @@
 # -*- python -*-
 # ex: set syntax=python:
 
+import os
+
 # This is a sample buildmaster config file. It must be installed as
 # 'master.cfg' in your buildmaster's base directory (although the filename
 # can be changed with the --basedir option to 'mktap buildbot master').
@@ -47,6 +49,7 @@ c['slaves'] = [BuildSlave("lfbuild-amd64", "bot1passwd", max_builds=1),
 c['slavePortnum'] = 9989
 
 lsb_buildslave_names = ["lfbuild-amd64"]
+lsb_buildslave_arch_indep_names = ["lfbuild-amd64"]
 
 ####### CHANGESOURCES
 
@@ -84,9 +87,9 @@ c['change_source'] = PBChangeSource()
 
 from buildbot import scheduler
 
-sch_lsb_sdk = scheduler.Scheduler(name="build-sdk", branch=None,
-                                  treeStableTimer=2*60,
-                                  builderNames=["build-sdk"])
+sch_lsb_sdk = scheduler.Nightly(name="build-sdk", branch=None,
+                                builderNames=["build-sdk"],
+                                hour=19, minute=0)
 sch_update_lsb_sdk = scheduler.Dependent(name="update-sdk",
                                          upstream=sch_lsb_sdk,
                                          builderNames=["update-sdk"])
