Switch Moblin schedule to build after changes, instead of nightly.

--- a/master.cfg
+++ b/master.cfg
@@ -57,8 +57,13 @@ lsb_buildslave_arch_indep_names = ["lfbuild-amd64"]
 # about source code changes. Any class which implements IChangeSource can be
 # put here: there are several in buildbot/changes/*.py to choose from.
 
-from buildbot.changes.pb import PBChangeSource
-c['change_source'] = PBChangeSource()
+from bzr_buildbot import BzrPoller
+
+c['change_source'] = []
+for branch in ("app-checker", "distribution-checker", "moblin-osv-tests"):
+    c['change_source'].append(
+        BzrPoller(url="%sdevel/%s" % (moblin_bzr_toplevel, branch),
+                  branch_name="devel/" + branch))
 
 # For example, if you had CVSToys installed on your repository, and your
 # CVSROOT/freshcfg file had an entry like this:
@@ -94,20 +99,20 @@ sch_update_lsb_sdk = scheduler.Dependent(name="update-sdk",
                                          upstream=sch_lsb_sdk,
                                          builderNames=["update-sdk"])
 
-sch_moblin_builds = \
-    scheduler.Nightly(name="build-moblin-osv-tests", branch=None,
-                      builderNames=["build-moblin-osv-tests",
-                                    "build-moblin-app-checker",
-                                    "build-moblin-distribution-checker"],
-                      hour=3, minute=0)
+c['schedulers'] = [sch_lsb_sdk, sch_update_lsb_sdk]
 
-sch_moblin_results = \
-    scheduler.Nightly(name="build-moblin-results", branch=None,
-                      builderNames=["build-moblin-results"],
-                      hour=4, minute=0)
-
-c['schedulers'] = [sch_lsb_sdk, sch_update_lsb_sdk, 
-                   sch_moblin_builds, sch_moblin_results]
+for (prj, branch_name) in [("build-moblin-osv-tests", "moblin-osv-tests"),
+                           ("build-moblin-app-checker", "app-checker"),
+                           ("build-moblin-distribution-checker", 
+                            "distribution-checker")]:
+    prj_scheduler = scheduler.Scheduler(name=prj,
+                                        branch="devel/" + branch_name,
+                                        builderNames=[prj],
+                                        treeStableTimer=4*60*60)
+    update_scheduler = scheduler.Dependent(name="update-" + prj,
+                                           builderNames=["build-moblin-results"],
+                                           upstream=prj_scheduler)
+    c['schedulers'].extend([prj_scheduler, update_scheduler])
 
 
 ####### BUILDERS
@@ -258,8 +263,10 @@ results_builder.addStep(ShellCommand(command=["tar", "czf",
                                      name="tar"))
 results_builder.addStep(FileUpload(slavesrc="moblin-results.tar.gz", 
                                    masterdest="moblin-results.tar.gz"))
-results_builder.addStep(ShellCommand(command=["rm", "-rf", 
-                                              "../../moblin-results"]))
+# For now, keep old results around, since we may not build everything
+# every night.  To start fresh daily, uncomment the following.
+#results_builder.addStep(ShellCommand(command=["rm", "-rf", 
+#                                              "../../moblin-results"]))
 
 # Final build configuration
 
