Make sure moblin-app-checker builds if any of its repos change.

--- a/master.cfg
+++ b/master.cfg
@@ -60,7 +60,8 @@ lsb_buildslave_arch_indep_names = ["lfbuild-amd64"]
 from bzr_buildbot import BzrPoller
 
 c['change_source'] = []
-for branch in ("app-checker", "distribution-checker", "moblin-osv-tests"):
+for branch in ("app-checker", "distribution-checker", "moblin-osv-tests",
+               "moblin-isv-tests", "misc-test"):
     c['change_source'].append(
         BzrPoller(url="%sdevel/%s" % (moblin_bzr_toplevel, branch),
                   branch_name="devel/" + branch))
@@ -101,14 +102,15 @@ sch_update_lsb_sdk = scheduler.Dependent(name="update-sdk",
 
 c['schedulers'] = [sch_lsb_sdk, sch_update_lsb_sdk]
 
-for (prj, branch_name) in [("build-moblin-osv-tests", "moblin-osv-tests"),
-                           ("build-moblin-app-checker", "app-checker"),
-                           ("build-moblin-distribution-checker", 
-                            "distribution-checker")]:
-    prj_scheduler = scheduler.Scheduler(name=prj,
-                                        branch="devel/" + branch_name,
-                                        builderNames=[prj],
-                                        treeStableTimer=4*60*60)
+for (prj, branch_names) in [("build-moblin-osv-tests", ["moblin-osv-tests"]),
+                            ("build-moblin-app-checker", 
+                             ["app-checker", "moblin-isv-tests", "misc-test"]),
+                            ("build-moblin-distribution-checker", 
+                             ["distribution-checker"])]:
+    branches = ["devel/" + x for x in branch_names]
+    prj_scheduler = scheduler.AnyBranchScheduler(name=prj, branches=branches,
+                                                 builderNames=[prj],
+                                                 treeStableTimer=4*60*60)
     update_scheduler = scheduler.Dependent(name="update-" + prj,
                                            builderNames=["build-moblin-results"],
                                            upstream=prj_scheduler)
