Make sure we build the Moblin variant of Moblin's dist-checker.

--- a/master.cfg
+++ b/master.cfg
@@ -233,7 +233,7 @@ dist_checker_builder.addStep(ShellCommand(command=['rm', '-rf',
 dist_checker_builder.addStep(ShellCommand(command=['mkdir', '-p', 
                                                    '../../moblin-results/distribution-checker'],
                                           name="copypkg2"))
-dist_checker_builder.addStep(ShellCommand(command="cd package && make BUILD_NO_DEB=1",
+dist_checker_builder.addStep(ShellCommand(command="cd package && make BUILD_NO_DEB=1 BRANCH=moblin",
                                           name="build", timeout=60*60))
 dist_checker_builder.addStep(ShellCommand(command='cp package/*.rpm ../../moblin-results/distribution-checker',
                                           name="copypkg3"))
