Switch to ShellCommand for checking out app-checker source.
It turns out that buildbot will override the default branch on source 
checkouts.  This makes it impossible to use the source management 
features in a multi-tree build, like app-checker, and have the 
build-on-change builds work properly.  So, we continue to use the 
ChangeSource mechanism to decide whether to build, but actually do the 
build by calling bzr manually.

--- a/master.cfg
+++ b/master.cfg
@@ -196,32 +196,43 @@ update_sdk.addStep(ShellCommand(command=['update-sdk',
 # Moblin builds
 
 app_checker_builder = factory.BuildFactory()
-app_checker_builder.addStep(Bzr(baseURL=moblin_bzr_toplevel, 
-                    defaultBranch="devel/app-checker",
-                    mode="update", timeout=60*60, workdir="app-checker"))
-app_checker_builder.addStep(Bzr(baseURL=moblin_bzr_toplevel, 
-                    defaultBranch="devel/moblin-isv-tests",
-                    mode="update", timeout=60*60, workdir="moblin-isv-tests"))
-app_checker_builder.addStep(Bzr(baseURL=moblin_bzr_toplevel, 
-                    defaultBranch="devel/misc-test",
-                    mode="update", timeout=60*60, workdir="misc-test"))
+
+# Direct bzr version of checkout step.  This doesn't work, because a
+# ChangeSource will override the defaultBranch setting, and you get three
+# checkouts of the same source.
+#app_checker_builder.addStep(Bzr(baseURL=moblin_bzr_toplevel, 
+#                    defaultBranch="devel/app-checker",
+#                    mode="update", timeout=60*60, workdir="app-checker"))
+#app_checker_builder.addStep(Bzr(baseURL=moblin_bzr_toplevel, 
+#                    defaultBranch="devel/moblin-isv-tests",
+#                    mode="update", timeout=60*60, workdir="moblin-isv-tests"))
+#app_checker_builder.addStep(Bzr(baseURL=moblin_bzr_toplevel, 
+#                    defaultBranch="devel/misc-test",
+#                    mode="update", timeout=60*60, workdir="misc-test"))
+
+# ShellCommand version of checkout step.
+app_checker_repos = ["app-checker", "moblin-isv-tests", "misc-test"]
+for repo in app_checker_repos:
+    app_checker_builder.addStep(
+        ShellCommand(command=["bzr", "checkout",
+                              os.path.join(moblin_bzr_toplevel, "devel", 
+                                           repo)]))
+# The following steps may need to be adjusted for the Bzr or ShellCommand
+# versions of the checkout step.
+
 app_checker_builder.addStep(ShellCommand(command=['rm', '-rf', 
                                       '../../moblin-results/app-checker'],
-                                         name="copypkg1", 
-                                         workdir="app-checker"))
+                                         name="copypkg1"))
 app_checker_builder.addStep(ShellCommand(command=['mkdir', '-p', 
                                       '../../moblin-results/app-checker'],
-                                         name="copypkg2",
-                                         workdir="app-checker"))
-app_checker_builder.addStep(ShellCommand(command="cd package && make BUILD_NO_DEB=1 BZRTREES=../..",
-                                         name="build",
-                                         workdir="app-checker"))
-app_checker_builder.addStep(ShellCommand(command='cp package/*.rpm ../../moblin-results/app-checker',
-                                         name="copypkg3",
-                                         workdir="app-checker"))
-app_checker_builder.addStep(ShellCommand(command="cd package && make clean",
-                                         name="clean",
-                                         workdir="app-checker"))
+                                         name="copypkg2"))
+app_checker_builder.addStep(ShellCommand(command="cd app-checker/package && make BUILD_NO_DEB=1 BZRTREES=../..",
+                                         name="build"))
+app_checker_builder.addStep(ShellCommand(command='cp app-checker/package/*.rpm ../../moblin-results/app-checker',
+                                         name="copypkg3"))
+
+for repo in app_checker_repos:
+    app_checker_builder.addStep(ShellCommand(command=["rm", "-rf", repo]))
 
 dist_checker_builder = factory.BuildFactory()
 dist_checker_builder.addStep(Bzr(baseURL=moblin_bzr_toplevel, 
