--- a/master.cfg
+++ b/master.cfg
@@ -61,7 +61,7 @@ from bzr_buildbot import BzrPoller
 
 c['change_source'] = []
 for branch in ("app-checker", "distribution-checker", "moblin-osv-tests",
-               "moblin-isv-tests", "misc-test"):
+               "moblin-isv-tests", "misc-test", "moblin-xvfb"):
     c['change_source'].append(
         BzrPoller(url="%sdevel/%s" % (moblin_bzr_toplevel, branch),
                   branch_name="devel/" + branch))
@@ -106,7 +106,8 @@ for (prj, branch_names) in [("build-moblin-osv-tests", ["moblin-osv-tests"]),
                             ("build-moblin-app-checker", 
                              ["app-checker", "moblin-isv-tests", "misc-test"]),
                             ("build-moblin-distribution-checker", 
-                             ["distribution-checker"])]:
+                             ["distribution-checker"]),
+                            ("build-moblin-xvfb", ["moblin-xvfb"])]:
     branches = ["devel/" + x for x in branch_names]
     prj_scheduler = scheduler.AnyBranchScheduler(name=prj, branches=branches,
                                                  builderNames=[prj],
@@ -269,6 +270,25 @@ for prj in moblin_osv_tests_projects:
         ShellCommand(command='cp %s/package/*.rpm ../../moblin-results/moblin_osv_tests' % prj,
                      name="copypkgs_" + prj))
 
+moblin_xvfb_builder = factory.BuildFactory()
+moblin_xvfb_builder.addStep(Bzr(baseURL=moblin_bzr_toplevel, 
+                                defaultBranch="devel/moblin-xvfb",
+                                mode="copy", timeout=60*60))
+moblin_xvfb_builder.addStep(
+    ShellCommand(command=['rm', '-rf', 
+                          '../../moblin-results/moblin-xvfb'],
+                 name="copypkg1"))
+moblin_xvfb_builder.addStep(
+    ShellCommand(command=['mkdir', '-p', 
+                          '../../moblin-results/moblin-xvfb'],
+                 name="copypkg2"))
+moblin_xvfb_builder.addStep(
+    ShellCommand(command="cd package && make BUILD_NO_DEB=1",
+                 name="build", timeout=60*60))
+moblin_xvfb_builder.addStep(
+    ShellCommand(command='cp package/*.rpm ../../moblin-results/moblin-xvfb',
+                 name="copypkg3"))
+
 results_builder = factory.BuildFactory()
 results_builder.addStep(ShellCommand(command=["tar", "czf", 
                                               "moblin-results.tar.gz", 
@@ -296,6 +316,8 @@ c['builders'] = [
       'slavenames': ['lfbuild-moblin'],
       'builddir': 'build-moblin-distribution-checker', 
       'factory': dist_checker_builder },
+    { 'name': 'build-moblin-xvfb', 'slavenames': ['lfbuild-moblin'],
+      'builddir': 'build-moblin-xvfb', 'factory': moblin_xvfb_builder },
     { 'name': 'build-moblin-results', 'slavenames': ['lfbuild-moblin'],
       'builddir': 'build-moblin-results', 'factory': results_builder },
 ]
