Add bickley and clutter Moblin tests (from OSV).

--- a/master.cfg
+++ b/master.cfg
@@ -19,11 +19,12 @@ lsb_bzr_sdk_projects = ["lsbdev-base", "lsbdev-cc", "lsbdev-c++",
 
 moblin_bzr_toplevel = "http://bzr.linuxfoundation.org/moblin/"
 moblin_osv_tests_projects = ["moblin-test-kernel", "moblin-test-media", 
-                             "moblin-test-browser",
+                             "moblin-test-browser", "moblin-test-clutter",
                              "moblin-test-package-management", 
                              "moblin-test-desktop", 
                              "moblin-test-package-version", 
-                             "moblin-test-graphics", "moblin-test-perf-power"]
+                             "moblin-test-graphics", "moblin-test-perf-power",
+                             "moblin-test-bickley"]
 
 
 # This is the dictionary that the buildmaster pays attention to. We also use
