Add two sample jobs for perfecting the rest of the LSB builds.
Each job uses one of the two methods for building (packaging vs.
package dir in the tree).  They are "makelsbpkg" and "lsbappchk".

--- a/master.cfg
+++ b/master.cfg
@@ -27,6 +27,45 @@ moblin_osv_tests_projects = ["moblin-test-kernel", "moblin-test-media",
                              "moblin-test-bickley"]
 
 
+# We define our own build classes, for working with the quirky LSB build
+# system.  The idea is that we set (or don't) certain environment variables
+# depending on whether the branch or revision has been overriden, to add
+# the date-based versions when they haven't.  Also, for those projects
+# built out of packaging, handle them too.
+
+from buildbot.steps.shell import ShellCommand
+
+class LSBBuildCommand(ShellCommand):
+    def setupEnvironment(self, cmd):
+        if self.build.source.changes is None:
+            if self.build.source.revision is None:
+                buildrev = "-1"
+            else:
+                buildrev = self.build.source.revision
+            if cmd.args['env'] is None:
+                cmd.args
+            self.build.slaveEnvironment['OFFICIAL_RELEASE'] = buildrev
+
+        ShellCommand.setupEnvironment(self, cmd)
+
+class LSBBuildPackage(LSBBuildCommand):
+    def __init__(self, **kwargs):
+        if "command" not in kwargs:
+            kwargs["command"] = "cd package && make rpm_package"
+        ShellCommand.__init__(self, **kwargs)
+
+# Automate some of the packaging build.  When using this, be sure to check
+# out a copy of "packaging" (via ShellCommand, as buildbot's source stuff
+# can't currently handle multi-repo builds), that your source checkout
+# uses a named build dir that's the same as the project, and that BZRTREES
+# is set to "..".
+
+class LSBBuildFromPackaging(LSBBuildCommand):
+    def __init__(self, **kwargs):
+        if "subdir" in kwargs:
+            kwargs["command"] = "cd ../packaging/%s && make rpm_package" % kwargs["subdir"]
+        ShellCommand.__init__(self, **kwargs)
+
 # This is the dictionary that the buildmaster pays attention to. We also use
 # a shorter alias to save typing.
 c = BuildmasterConfig = {}
@@ -159,7 +198,6 @@ for (prj, branch_names) in [("build-moblin-osv-tests", ["moblin-osv-tests"]),
 #c['builders'] = [b1]
 
 from buildbot.process import factory
-from buildbot.steps.shell import ShellCommand
 from buildbot.steps.source import Bzr
 from buildbot.steps.transfer import FileUpload
 
@@ -194,6 +232,45 @@ build_sdk.addStep(FileUpload(slavesrc="../sdk-results.tar.gz",
 update_sdk = factory.BuildFactory()
 update_sdk.addStep(ShellCommand(command=['update-sdk', 
                                          '../../build-sdk/sdk-results']))
+
+build_makelsbpkg = factory.BuildFactory()
+build_makelsbpkg.addStep(Bzr(baseURL=lsb_bzr_toplevel,
+                             defaultBranch="devel/makelsbpkg",
+                             mode="copy", timeout=4*60*60))
+build_makelsbpkg.addStep(LSBBuildPackage())
+build_makelsbpkg.addStep(ShellCommand(command=["rm", "-rf", "../results"]))
+build_makelsbpkg.addStep(ShellCommand(command=["mkdir", "-p", "../results"]))
+build_makelsbpkg.addStep(ShellCommand(command="cp package/*.rpm ../results"))
+build_makelsbpkg.addStep(ShellCommand(command=["tar", "czf", 
+                                               "../results.tar.gz", 
+                                               "../results"]))
+build_makelsbpkg.addStep(ShellCommand(command=["rm", "-rf", "../results"]))
+build_makelsbpkg.addStep(FileUpload(slavesrc="../results.tar.gz", 
+                                    masterdest="makelsbpkg-results-%s.tar.gz" 
+                                    % os.uname()[-1]))
+
+build_lsb_appchk = factory.BuildFactory()
+build_lsb_appchk.addStep(Bzr(baseURL=lsb_bzr_toplevel,
+                             defaultBranch="devel/misc-test",
+                             workdir="misc-test",
+                             mode="update", timeout=4*60*60))
+build_lsb_appchk.addStep(ShellCommand(command=["rm", "-rf", "../packaging"]))
+build_lsb_appchk.addStep(
+    ShellCommand(command=["bzr", "checkout", 
+                          os.path.join(lsb_bzr_toplevel, "devel/packaging"),
+                          "../packaging"]))
+build_lsb_appchk.addStep(LSBBuildFromPackaging(subdir="lsbappchk",
+                                               env={"BZRTREES": ".."}))
+build_lsb_appchk.addStep(ShellCommand(command=["rm", "-rf", "../results"]))
+build_lsb_appchk.addStep(ShellCommand(command=["mkdir", "-p", "../results"]))
+build_lsb_appchk.addStep(ShellCommand(command="cp ../packaging/lsbappchk/*.rpm ../results"))
+build_lsb_appchk.addStep(ShellCommand(command=["tar", "czf", 
+                                               "../results.tar.gz", 
+                                               "../results"]))
+build_lsb_appchk.addStep(ShellCommand(command=["rm", "-rf", "../results"]))
+build_lsb_appchk.addStep(FileUpload(slavesrc="../results.tar.gz", 
+                                    masterdest="lsbappchk-results-%s.tar.gz" 
+                                    % os.uname()[-1]))
 
 # Moblin builds
 
@@ -309,6 +386,10 @@ c['builders'] = [
       'builddir': 'build-sdk', 'factory': build_sdk },
     { 'name': 'update-sdk', 'slavenames': lsb_buildslave_names,
       'builddir': 'update-sdk', 'factory': update_sdk },
+    { 'name': 'build-makelsbpkg', 'slavenames': lsb_buildslave_names,
+      'builddir': 'makelsbpkg', 'factory': build_makelsbpkg },
+    { 'name': 'build-lsb-appchk', 'slavenames': lsb_buildslave_names,
+      'builddir': 'lsbappchk', 'factory': build_lsb_appchk },
     { 'name': 'build-moblin-osv-tests', 'slavenames': ['lfbuild-moblin'],
       'builddir': 'build-moblin-osv-tests', 'factory': osv_tests_builder },
     { 'name': 'build-moblin-app-checker', 'slavenames': ['lfbuild-moblin'],
