Add build for libchk-me.

--- a/master.cfg
+++ b/master.cfg
@@ -147,7 +147,8 @@ for (prj, branch_names) in [("build-moblin-osv-tests", ["moblin-osv-tests"]),
                              ["app-checker", "moblin-isv-tests", "misc-test"]),
                             ("build-moblin-distribution-checker", 
                              ["distribution-checker"]),
-                            ("build-moblin-xvfb", ["moblin-xvfb"])]:
+                            ("build-moblin-xvfb", ["moblin-xvfb"]),
+                            ("build-libchk-me", ["misc-test"])]:
     branches = ["devel/" + x for x in branch_names]
     prj_scheduler = scheduler.AnyBranchScheduler(name=prj, branches=branches,
                                                  builderNames=[prj],
@@ -367,6 +368,25 @@ moblin_xvfb_builder.addStep(
     ShellCommand(command='cp package/*.rpm ../../moblin-results/moblin-xvfb',
                  name="copypkg3"))
 
+libchk_me_builder = factory.BuildFactory()
+libchk_me_builder.addStep(Bzr(baseURL=moblin_bzr_toplevel, 
+                              defaultBranch="devel/misc-test",
+                              mode="copy", timeout=60*60))
+libchk_me_builder.addStep(
+    ShellCommand(command=['rm', '-rf', 
+                          '../../moblin-results/libchk-me'],
+                 name="copypkg1"))
+libchk_me_builder.addStep(
+    ShellCommand(command=['mkdir', '-p', 
+                          '../../moblin-results/libchk-me'],
+                 name="copypkg2"))
+libchk_me_builder.addStep(
+    ShellCommand(command="cd package && make",
+                 name="build", timeout=60*60))
+libchk_me_builder.addStep(
+    ShellCommand(command='cp package/*.rpm ../../moblin-results/libchk-me',
+                 name="copypkg3"))
+
 results_builder = factory.BuildFactory()
 results_builder.addStep(ShellCommand(command=["tar", "czf", 
                                               "moblin-results.tar.gz", 
@@ -400,6 +420,8 @@ c['builders'] = [
       'factory': dist_checker_builder },
     { 'name': 'build-moblin-xvfb', 'slavenames': ['lfbuild-moblin'],
       'builddir': 'build-moblin-xvfb', 'factory': moblin_xvfb_builder },
+    { 'name': 'build-libchk-me', 'slavenames': ['lfbuild-moblin'],
+      'builddir': 'build-libchk-me', 'factory': libchk_me_builder },
     { 'name': 'build-moblin-results', 'slavenames': ['lfbuild-moblin'],
       'builddir': 'build-moblin-results', 'factory': results_builder },
 ]
