Switch stable timer from 4 hours to 1 hour.

--- a/master.cfg
+++ b/master.cfg
@@ -13,6 +13,9 @@ import os
 
 # Toplevel configuration, used by the builder/scheduler setup.
 
+stable_timer_hours = 1
+stable_timer_seconds = stable_timer_hours * 60 * 60
+
 lsb_bzr_toplevel = "http://bzr.linuxfoundation.org/lsb/"
 lsb_bzr_sdk_projects = ["lsbdev-base", "lsbdev-cc", "lsbdev-c++",
                         "lsbdev-desktop", "lsbdev-qt", "lsbdev-qt3"]
@@ -150,9 +153,10 @@ for (prj, branch_names) in [("build-moblin-osv-tests", ["moblin-osv-tests"]),
                             ("build-moblin-xvfb", ["moblin-xvfb"]),
                             ("build-libchk-me", ["misc-test"])]:
     branches = ["devel/" + x for x in branch_names]
-    prj_scheduler = scheduler.AnyBranchScheduler(name=prj, branches=branches,
-                                                 builderNames=[prj],
-                                                 treeStableTimer=4*60*60)
+    prj_scheduler = \
+        scheduler.AnyBranchScheduler(name=prj, branches=branches,
+                                     builderNames=[prj],
+                                     treeStableTimer=stable_timer_seconds)
     update_scheduler = scheduler.Dependent(name="update-" + prj,
                                            builderNames=["build-moblin-results"],
                                            upstream=prj_scheduler)
