Add categories so status can be differentiated by project.

--- a/master.cfg
+++ b/master.cfg
@@ -407,27 +407,34 @@ results_builder.addStep(FileUpload(slavesrc="moblin-results.tar.gz",
 
 c['builders'] = [
     { 'name': 'build-sdk', 'slavenames': lsb_buildslave_names,
-      'builddir': 'build-sdk', 'factory': build_sdk },
+      'builddir': 'build-sdk', 'factory': build_sdk, 'category': 'lsb' },
     { 'name': 'update-sdk', 'slavenames': lsb_buildslave_names,
-      'builddir': 'update-sdk', 'factory': update_sdk },
+      'builddir': 'update-sdk', 'factory': update_sdk, 'category': 'lsb' },
     { 'name': 'build-makelsbpkg', 'slavenames': lsb_buildslave_names,
-      'builddir': 'makelsbpkg', 'factory': build_makelsbpkg },
+      'builddir': 'makelsbpkg', 'factory': build_makelsbpkg, 
+      'category': 'lsb' },
     { 'name': 'build-lsb-appchk', 'slavenames': lsb_buildslave_names,
-      'builddir': 'lsbappchk', 'factory': build_lsb_appchk },
+      'builddir': 'lsbappchk', 'factory': build_lsb_appchk, 
+      'category': 'lsb' },
     { 'name': 'build-moblin-osv-tests', 'slavenames': ['lfbuild-moblin'],
-      'builddir': 'build-moblin-osv-tests', 'factory': osv_tests_builder },
+      'builddir': 'build-moblin-osv-tests', 'factory': osv_tests_builder, 
+      'category': 'moblin' },
     { 'name': 'build-moblin-app-checker', 'slavenames': ['lfbuild-moblin'],
-      'builddir': 'build-moblin-app-checker', 'factory': app_checker_builder },
+      'builddir': 'build-moblin-app-checker', 'factory': app_checker_builder, 
+      'category': 'moblin' },
     { 'name': 'build-moblin-distribution-checker', 
       'slavenames': ['lfbuild-moblin'],
       'builddir': 'build-moblin-distribution-checker', 
-      'factory': dist_checker_builder },
+      'factory': dist_checker_builder, 'category': 'moblin' },
     { 'name': 'build-moblin-xvfb', 'slavenames': ['lfbuild-moblin'],
-      'builddir': 'build-moblin-xvfb', 'factory': moblin_xvfb_builder },
+      'builddir': 'build-moblin-xvfb', 'factory': moblin_xvfb_builder,
+      'category': 'moblin' },
     { 'name': 'build-libchk-me', 'slavenames': ['lfbuild-moblin'],
-      'builddir': 'build-libchk-me', 'factory': libchk_me_builder },
+      'builddir': 'build-libchk-me', 'factory': libchk_me_builder,
+      'category': 'moblin' },
     { 'name': 'build-moblin-results', 'slavenames': ['lfbuild-moblin'],
-      'builddir': 'build-moblin-results', 'factory': results_builder },
+      'builddir': 'build-moblin-results', 'factory': results_builder,
+      'category': 'moblin' },
 ]
 
 
