--- a/master.cfg
+++ b/master.cfg
@@ -398,6 +398,7 @@ results_builder.addStep(ShellCommand(command=["tar", "czf",
                                      name="tar"))
 results_builder.addStep(FileUpload(slavesrc="moblin-results.tar.gz", 
                                    masterdest="moblin-results.tar.gz"))
+results_builder.addStep(MasterShellCommand(command="./upload-moblin-results"))
 # For now, keep old results around, since we may not build everything
 # every night.  To start fresh daily, uncomment the following.
 #results_builder.addStep(ShellCommand(command=["rm", "-rf", 
