Be sure to import MasterShellCommand.

--- a/master.cfg
+++ b/master.cfg
@@ -205,6 +205,7 @@ for (prj, branch_names) in [("build-moblin-osv-tests", ["moblin-osv-tests"]),
 from buildbot.process import factory
 from buildbot.steps.source import Bzr
 from buildbot.steps.transfer import FileUpload
+from buildbot.steps.master import MasterShellCommand
 
 # LSB builds
 
