Fix per-arch renaming to actually work.

--- a/master.cfg
+++ b/master.cfg
@@ -37,6 +37,13 @@ moblin_osv_tests_projects = ["moblin-test-kernel", "moblin-test-media",
 # built out of packaging, handle them too.
 
 from buildbot.steps.shell import ShellCommand
+from buildbot.steps.master import MasterShellCommand
+
+class PropMasterShellCommand(MasterShellCommand):
+    def start(self):
+        properties = self.build.getProperties()
+        self.command = properties.render(self.command)
+        MasterShellCommand.start(self)
 
 class LSBBuildCommand(ShellCommand):
     def setupEnvironment(self, cmd):
@@ -205,7 +212,7 @@ for (prj, branch_names) in [("build-moblin-osv-tests", ["moblin-osv-tests"]),
 from buildbot.process import factory
 from buildbot.steps.source import Bzr
 from buildbot.steps.transfer import FileUpload
-from buildbot.steps.master import MasterShellCommand
+from buildbot.process.properties import WithProperties
 
 # LSB builds
 
@@ -232,8 +239,10 @@ build_sdk.addStep(ShellCommand(command=['tar', 'czf', '../sdk-results.tar.gz',
                                         '../sdk-results'],
                                name="pack-sdk"))
 build_sdk.addStep(FileUpload(slavesrc="../sdk-results.tar.gz", 
-                             masterdest="lsb-sdk-results-%s.tar.gz" 
-                                         % os.uname()[-1]))
+                             masterdest="lsb-sdk-results.tar.gz"))
+build_sdk.addStep(
+    PropMasterShellCommand(command=["mv", "-f", "lsb-sdk-results.tar.gz",
+                                    WithProperties("lsb-sdk-results-%(slavename)s.tar.gz")]))
 
 update_sdk = factory.BuildFactory()
 update_sdk.addStep(ShellCommand(command=['update-sdk', 
@@ -252,8 +261,10 @@ build_makelsbpkg.addStep(ShellCommand(command=["tar", "czf",
                                                "../results"]))
 build_makelsbpkg.addStep(ShellCommand(command=["rm", "-rf", "../results"]))
 build_makelsbpkg.addStep(FileUpload(slavesrc="../results.tar.gz", 
-                                    masterdest="makelsbpkg-results-%s.tar.gz" 
-                                    % os.uname()[-1]))
+                                    masterdest="makelsbpkg-results.tar.gz"))
+build_makelsbpkg.addStep(
+    PropMasterShellCommand(command=["mv", "-f", "makelsbpkg-results.tar.gz",
+                                    WithProperties("makelsbpkg-results-%(slavename)s.tar.gz")]))
 
 build_lsb_appchk = factory.BuildFactory()
 build_lsb_appchk.addStep(Bzr(baseURL=lsb_bzr_toplevel,
@@ -275,8 +286,10 @@ build_lsb_appchk.addStep(ShellCommand(command=["tar", "czf",
                                                "../results"]))
 build_lsb_appchk.addStep(ShellCommand(command=["rm", "-rf", "../results"]))
 build_lsb_appchk.addStep(FileUpload(slavesrc="../results.tar.gz", 
-                                    masterdest="lsbappchk-results-%s.tar.gz" 
-                                    % os.uname()[-1]))
+                                    masterdest="lsbappchk-results.tar.gz"))
+build_lsb_appchk.addStep(
+    PropMasterShellCommand(command=["mv", "-f", "lsbappchk-results.tar.gz",
+                                    WithProperties("lsbappchk-results-%(slavename)s.tar.gz")]))
 
 # Moblin builds
 
