Fix appchk build failure introduced with 0.7.11.

--- a/master.cfg
+++ b/master.cfg
@@ -74,6 +74,7 @@ class LSBBuildFromPackaging(LSBBuildCommand):
     def __init__(self, **kwargs):
         if "subdir" in kwargs:
             kwargs["command"] = "cd ../packaging/%s && make rpm_package" % kwargs["subdir"]
+            del kwargs["subdir"]
         ShellCommand.__init__(self, **kwargs)
 
 # This is the dictionary that the buildmaster pays attention to. We also use
