Make the two "guinea pig" LSB builds generic.

--- a/master.cfg
+++ b/master.cfg
@@ -217,6 +217,8 @@ from buildbot.process.properties import WithProperties
 
 # LSB builds
 
+lsb_builds = []
+
 build_sdk = factory.BuildFactory()
 build_sdk.addStep(Bzr(baseURL=lsb_bzr_toplevel, 
                       defaultBranch="devel/packaging",
@@ -249,48 +251,55 @@ update_sdk = factory.BuildFactory()
 update_sdk.addStep(ShellCommand(command=['update-sdk', 
                                          '../../build-sdk/sdk-results']))
 
-build_makelsbpkg = factory.BuildFactory()
-build_makelsbpkg.addStep(Bzr(baseURL=lsb_bzr_toplevel,
-                             defaultBranch="devel/makelsbpkg",
-                             mode="copy", timeout=4*60*60))
-build_makelsbpkg.addStep(LSBBuildPackage())
-build_makelsbpkg.addStep(ShellCommand(command=["rm", "-rf", "../results"]))
-build_makelsbpkg.addStep(ShellCommand(command=["mkdir", "-p", "../results"]))
-build_makelsbpkg.addStep(ShellCommand(command="cp package/*.rpm ../results"))
-build_makelsbpkg.addStep(ShellCommand(command=["tar", "czf", 
-                                               "../results.tar.gz", 
-                                               "../results"]))
-build_makelsbpkg.addStep(ShellCommand(command=["rm", "-rf", "../results"]))
-build_makelsbpkg.addStep(FileUpload(slavesrc="../results.tar.gz", 
-                                    masterdest="makelsbpkg-results.tar.gz"))
-build_makelsbpkg.addStep(
-    PropMasterShellCommand(command=["mv", "-f", "makelsbpkg-results.tar.gz",
-                                    WithProperties("makelsbpkg-results-%(slavename)s.tar.gz")]))
+for prj in ["makelsbpkg"]:
+    b = factory.BuildFactory()
+    b.addStep(Bzr(baseURL=lsb_bzr_toplevel,
+                  defaultBranch="devel/%s" % prj,
+                  mode="copy", timeout=4*60*60))
+    b.addStep(LSBBuildPackage())
+    b.addStep(ShellCommand(command=["rm", "-rf", "../results"]))
+    b.addStep(ShellCommand(command=["mkdir", "-p", "../results"]))
+    b.addStep(ShellCommand(command="cp package/*.rpm ../results"))
+    b.addStep(ShellCommand(command=["tar", "czf", "../results.tar.gz", 
+                                    "../results"]))
+    b.addStep(ShellCommand(command=["rm", "-rf", "../results"]))
+    b.addStep(FileUpload(slavesrc="../results.tar.gz", 
+                         masterdest="%s-results.tar.gz" % prj))
+    b.addStep(
+        PropMasterShellCommand(command=["mv", "-f", 
+                                        "%s-results.tar.gz" % prj,
+                                        WithProperties("%s-results-%%(slavename)s.tar.gz" % prj)]))
 
-build_lsb_appchk = factory.BuildFactory()
-build_lsb_appchk.addStep(Bzr(baseURL=lsb_bzr_toplevel,
-                             defaultBranch="devel/misc-test",
-                             workdir="misc-test",
-                             mode="update", timeout=4*60*60))
-build_lsb_appchk.addStep(ShellCommand(command=["rm", "-rf", "../packaging"]))
-build_lsb_appchk.addStep(
-    ShellCommand(command=["bzr", "checkout", 
-                          os.path.join(lsb_bzr_toplevel, "devel/packaging"),
-                          "../packaging"]))
-build_lsb_appchk.addStep(LSBBuildFromPackaging(subdir="lsbappchk",
-                                               env={"BZRTREES": ".."}))
-build_lsb_appchk.addStep(ShellCommand(command=["rm", "-rf", "../results"]))
-build_lsb_appchk.addStep(ShellCommand(command=["mkdir", "-p", "../results"]))
-build_lsb_appchk.addStep(ShellCommand(command="cp ../packaging/lsbappchk/*.rpm ../results"))
-build_lsb_appchk.addStep(ShellCommand(command=["tar", "czf", 
-                                               "../results.tar.gz", 
-                                               "../results"]))
-build_lsb_appchk.addStep(ShellCommand(command=["rm", "-rf", "../results"]))
-build_lsb_appchk.addStep(FileUpload(slavesrc="../results.tar.gz", 
-                                    masterdest="lsbappchk-results.tar.gz"))
-build_lsb_appchk.addStep(
-    PropMasterShellCommand(command=["mv", "-f", "lsbappchk-results.tar.gz",
-                                    WithProperties("lsbappchk-results-%(slavename)s.tar.gz")]))
+    lsb_builds.append(
+        { 'name': 'build-%s' % prj, 'slavenames': lsb_buildslave_names,
+          'builddir': prj, 'factory': b, 'category': 'lsb' })
+
+for (prj, repo) in [("lsbappchk", "misc-test")]:
+    b = factory.BuildFactory()
+    b.addStep(Bzr(baseURL=lsb_bzr_toplevel,
+                  defaultBranch="devel/%s" % repo,
+                  workdir=repo, mode="update", timeout=4*60*60))
+    b.addStep(ShellCommand(command=["rm", "-rf", "../packaging"]))
+    b.addStep(ShellCommand(
+            command=["bzr", "checkout", 
+                     os.path.join(lsb_bzr_toplevel, "devel/packaging"),
+                     "../packaging"]))
+    b.addStep(LSBBuildFromPackaging(subdir=prj,
+                                    env={"BZRTREES": ".."}))
+    b.addStep(ShellCommand(command=["rm", "-rf", "../results"]))
+    b.addStep(ShellCommand(command=["mkdir", "-p", "../results"]))
+    b.addStep(ShellCommand(command="cp ../packaging/%s/*.rpm ../results" % prj))
+    b.addStep(ShellCommand(command=["tar", "czf", "../results.tar.gz", 
+                                    "../results"]))
+    b.addStep(ShellCommand(command=["rm", "-rf", "../results"]))
+    b.addStep(FileUpload(slavesrc="../results.tar.gz", 
+                         masterdest="%s-results.tar.gz" % prj))
+    b.addStep(PropMasterShellCommand(
+            command=["mv", "-f", "%s-results.tar.gz" % prj,
+                     WithProperties("%s-results-%%(slavename)s.tar.gz" % prj)]))
+    lsb_builds.append(
+        { 'name': 'build-%s' % prj, 'slavenames': lsb_buildslave_names,
+          'builddir': prj, 'factory': b, 'category': 'lsb' })
 
 # Moblin builds
 
@@ -426,12 +435,6 @@ c['builders'] = [
       'builddir': 'build-sdk', 'factory': build_sdk, 'category': 'lsb' },
     { 'name': 'update-sdk', 'slavenames': lsb_buildslave_names,
       'builddir': 'update-sdk', 'factory': update_sdk, 'category': 'lsb' },
-    { 'name': 'build-makelsbpkg', 'slavenames': lsb_buildslave_names,
-      'builddir': 'makelsbpkg', 'factory': build_makelsbpkg, 
-      'category': 'lsb' },
-    { 'name': 'build-lsb-appchk', 'slavenames': lsb_buildslave_names,
-      'builddir': 'lsbappchk', 'factory': build_lsb_appchk, 
-      'category': 'lsb' },
     { 'name': 'build-moblin-osv-tests', 'slavenames': ['lfbuild-moblin'],
       'builddir': 'build-moblin-osv-tests', 'factory': osv_tests_builder, 
       'category': 'moblin' },
@@ -452,6 +455,7 @@ c['builders'] = [
       'builddir': 'build-moblin-results', 'factory': results_builder,
       'category': 'moblin' },
 ]
+c['builders'].extend(lsb_builds)
 
 
 ####### STATUS TARGETS
