--- a/master.cfg
+++ b/master.cfg
@@ -16,11 +16,13 @@ import os
 stable_timer_hours = 1
 stable_timer_seconds = stable_timer_hours * 60 * 60
 
-lsb_bzr_toplevel = "http://bzr.linuxfoundation.org/lsb/"
+bzr_toplevel = "http://bzr.linuxfoundation.org/"
+
 lsb_bzr_sdk_projects = ["lsbdev-base", "lsbdev-cc", "lsbdev-c++",
                         "lsbdev-desktop", "lsbdev-qt", "lsbdev-qt3"]
+lsb_pkg_subdir_projects = ["makelsbpkg"]
+lsb_packaging_projects = [("lsbappchk", "misc-test")]
 
-moblin_bzr_toplevel = "http://bzr.linuxfoundation.org/moblin/"
 moblin_osv_tests_projects = ["moblin-test-kernel", "moblin-test-media", 
                              "moblin-test-browser", "moblin-test-clutter",
                              "moblin-test-package-management", 
@@ -28,6 +30,9 @@ moblin_osv_tests_projects = ["moblin-test-kernel", "moblin-test-media",
                              "moblin-test-package-version", 
                              "moblin-test-graphics", "moblin-test-perf-power",
                              "moblin-test-bickley"]
+moblin_change_sources = ["app-checker", "distribution-checker", 
+                         "moblin-osv-tests", "moblin-isv-tests", "misc-test", 
+                         "moblin-xvfb"]
 
 
 # We define our own build classes, for working with the quirky LSB build
@@ -111,11 +116,21 @@ lsb_buildslave_arch_indep_names = ["lfbuild-amd64"]
 from bzr_buildbot import BzrPoller
 
 c['change_source'] = []
-for branch in ("app-checker", "distribution-checker", "moblin-osv-tests",
-               "moblin-isv-tests", "misc-test", "moblin-xvfb"):
+lsb_change_sources = lsb_pkg_subdir_projects + \
+    [x[1] for x in lsb_packaging_projects]
+added = []
+for branch in lsb_change_sources:
+    if branch in added:
+        continue
     c['change_source'].append(
-        BzrPoller(url="%sdevel/%s" % (moblin_bzr_toplevel, branch),
-                  branch_name="devel/" + branch))
+        BzrPoller(url="%slsb/devel/%s" % (bzr_toplevel, branch),
+                  branch_name="lsb/devel/" + branch))
+    added.append(branch)
+
+for branch in moblin_change_sources:
+    c['change_source'].append(
+        BzrPoller(url="%smoblin/devel/%s" % (bzr_toplevel, branch),
+                  branch_name="moblin/devel/" + branch))
 
 # For example, if you had CVSToys installed on your repository, and your
 # CVSROOT/freshcfg file had an entry like this:
@@ -144,6 +159,8 @@ for branch in ("app-checker", "distribution-checker", "moblin-osv-tests",
 
 from buildbot import scheduler
 
+# LSB schedulers
+
 sch_lsb_sdk = scheduler.Nightly(name="build-sdk", branch=None,
                                 builderNames=["build-sdk"],
                                 hour=19, minute=0)
@@ -153,6 +170,24 @@ sch_update_lsb_sdk = scheduler.Dependent(name="update-sdk",
 
 c['schedulers'] = [sch_lsb_sdk, sch_update_lsb_sdk]
 
+for prj in lsb_pkg_subdir_projects:
+    prj_scheduler = scheduler.Scheduler(name="build-" + prj,
+                                        branch=os.path.join("lsb/devel", prj),
+                                        builderNames=["build-" + prj],
+                                        treeStableTimer=stable_timer_seconds)
+    c['schedulers'].append(prj_scheduler)
+
+for (prj, repo) in lsb_packaging_projects:
+    branches = [os.path.join("lsb/devel", repo), "lsb/devel/packaging"]
+    prj_scheduler = \
+        scheduler.AnyBranchScheduler(name="build-" + prj,
+                                     branches=branches,
+                                     builderNames=["build-" + prj],
+                                     treeStableTimer=stable_timer_seconds)
+    c['schedulers'].append(prj_scheduler)
+
+# Moblin schedulers
+
 for (prj, branch_names) in [("build-moblin-osv-tests", ["moblin-osv-tests"]),
                             ("build-moblin-app-checker", 
                              ["app-checker", "moblin-isv-tests", "misc-test"]),
@@ -160,7 +195,7 @@ for (prj, branch_names) in [("build-moblin-osv-tests", ["moblin-osv-tests"]),
                              ["distribution-checker"]),
                             ("build-moblin-xvfb", ["moblin-xvfb"]),
                             ("build-libchk-me", ["misc-test"])]:
-    branches = ["devel/" + x for x in branch_names]
+    branches = ["moblin/devel/" + x for x in branch_names]
     prj_scheduler = \
         scheduler.AnyBranchScheduler(name=prj, branches=branches,
                                      builderNames=[prj],
@@ -220,8 +255,8 @@ from buildbot.process.properties import WithProperties
 lsb_builds = []
 
 build_sdk = factory.BuildFactory()
-build_sdk.addStep(Bzr(baseURL=lsb_bzr_toplevel, 
-                      defaultBranch="devel/packaging",
+build_sdk.addStep(Bzr(baseURL=bzr_toplevel, 
+                      defaultBranch="lsb/devel/packaging",
                       mode="copy"))
 build_sdk.addStep(ShellCommand(command=['reset-sdk'], name="reset-sdk"))
 build_sdk.addStep(ShellCommand(command=["rm", "-rf", 
@@ -251,10 +286,10 @@ update_sdk = factory.BuildFactory()
 update_sdk.addStep(ShellCommand(command=['update-sdk', 
                                          '../../build-sdk/sdk-results']))
 
-for prj in ["makelsbpkg"]:
+for prj in lsb_pkg_subdir_projects:
     b = factory.BuildFactory()
-    b.addStep(Bzr(baseURL=lsb_bzr_toplevel,
-                  defaultBranch="devel/%s" % prj,
+    b.addStep(Bzr(baseURL=bzr_toplevel,
+                  defaultBranch="lsb/devel/%s" % prj,
                   mode="copy", timeout=4*60*60))
     b.addStep(LSBBuildPackage())
     b.addStep(ShellCommand(command=["rm", "-rf", "../results"]))
@@ -274,15 +309,15 @@ for prj in ["makelsbpkg"]:
         { 'name': 'build-%s' % prj, 'slavenames': lsb_buildslave_names,
           'builddir': prj, 'factory': b, 'category': 'lsb' })
 
-for (prj, repo) in [("lsbappchk", "misc-test")]:
+for (prj, repo) in lsb_packaging_projects:
     b = factory.BuildFactory()
-    b.addStep(Bzr(baseURL=lsb_bzr_toplevel,
-                  defaultBranch="devel/%s" % repo,
+    b.addStep(Bzr(baseURL=bzr_toplevel,
+                  defaultBranch="lsb/devel/%s" % repo,
                   workdir=repo, mode="update", timeout=4*60*60))
     b.addStep(ShellCommand(command=["rm", "-rf", "../packaging"]))
     b.addStep(ShellCommand(
             command=["bzr", "checkout", 
-                     os.path.join(lsb_bzr_toplevel, "devel/packaging"),
+                     os.path.join(bzr_toplevel, "lsb/devel/packaging"),
                      "../packaging"]))
     b.addStep(LSBBuildFromPackaging(subdir=prj,
                                     env={"BZRTREES": ".."}))
@@ -323,7 +358,7 @@ app_checker_repos = ["app-checker", "moblin-isv-tests", "misc-test"]
 for repo in app_checker_repos:
     app_checker_builder.addStep(
         ShellCommand(command=["bzr", "checkout",
-                              os.path.join(moblin_bzr_toplevel, "devel", 
+                              os.path.join(bzr_toplevel, "moblin/devel", 
                                            repo)]))
 # The following steps may need to be adjusted for the Bzr or ShellCommand
 # versions of the checkout step.
@@ -343,8 +378,8 @@ for repo in app_checker_repos:
     app_checker_builder.addStep(ShellCommand(command=["rm", "-rf", repo]))
 
 dist_checker_builder = factory.BuildFactory()
-dist_checker_builder.addStep(Bzr(baseURL=moblin_bzr_toplevel, 
-                                 defaultBranch="devel/distribution-checker",
+dist_checker_builder.addStep(Bzr(baseURL=bzr_toplevel, 
+                                 defaultBranch="moblin/devel/distribution-checker",
                                  mode="copy", timeout=60*60))
 dist_checker_builder.addStep(ShellCommand(command=['rm', '-rf', 
                                                    '../../moblin-results/distribution-checker'],
@@ -358,8 +393,8 @@ dist_checker_builder.addStep(ShellCommand(command='cp package/*.rpm ../../moblin
                                           name="copypkg3"))
 
 osv_tests_builder = factory.BuildFactory()
-osv_tests_builder.addStep(Bzr(baseURL=moblin_bzr_toplevel, 
-                              defaultBranch="devel/moblin-osv-tests",
+osv_tests_builder.addStep(Bzr(baseURL=bzr_toplevel, 
+                              defaultBranch="moblin/devel/moblin-osv-tests",
                               mode="copy", timeout=60*60))
 osv_tests_builder.addStep(
     ShellCommand(command=['rm', '-rf', 
@@ -378,8 +413,8 @@ for prj in moblin_osv_tests_projects:
                      name="copypkgs_" + prj))
 
 moblin_xvfb_builder = factory.BuildFactory()
-moblin_xvfb_builder.addStep(Bzr(baseURL=moblin_bzr_toplevel, 
-                                defaultBranch="devel/moblin-xvfb",
+moblin_xvfb_builder.addStep(Bzr(baseURL=bzr_toplevel, 
+                                defaultBranch="moblin/devel/moblin-xvfb",
                                 mode="copy", timeout=60*60))
 moblin_xvfb_builder.addStep(
     ShellCommand(command=['rm', '-rf', 
@@ -397,8 +432,8 @@ moblin_xvfb_builder.addStep(
                  name="copypkg3"))
 
 libchk_me_builder = factory.BuildFactory()
-libchk_me_builder.addStep(Bzr(baseURL=moblin_bzr_toplevel, 
-                              defaultBranch="devel/misc-test",
+libchk_me_builder.addStep(Bzr(baseURL=bzr_toplevel, 
+                              defaultBranch="moblin/devel/misc-test",
                               mode="copy", timeout=60*60))
 libchk_me_builder.addStep(
     ShellCommand(command=['rm', '-rf', 
